<resources>
    <string name="app_name">talk2memo</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="subjects">Configure Subjects</string>
    <string name="language">Choose Language</string>
    <string name="info">Imprint</string>
    <string name="faq">FAQ</string>
    <string name="recipients">Configure Recipients</string>
    <string name="settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="recipient_info">Recipient Info</string>
    <string name="add">Add</string>
    <string name="use_subject">Use Subject</string>
    <string name="send_audio_file_to">Send Audio file to</string>
    <string name="content_of_email">Content of Email</string>
    <string name="send_email">Send Email</string>
    <string name="no_recording_found">No Recoding Found</string>
    <string name="recording_deleted">Recording Deleted</string>
    <string name="saving_file">Saving File</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete?</string>
    <string name="record_first">Please record voice first</string>
    <string name="addrecipients_first">Please first add recipients from settings</string>
    <string name="unknown_error">Something went wrong, please try again</string>
    <string name="saved">Saved</string>
    <string name="email_not_valid">Email is not Valid</string>
    <string name="email_already_exists">Email already Exists</string>
    <string name="audio_deleted">Audio File Deleted</string>
    <string name="empty_subject">You cannot select empty Subject</string>
    <string name="subject_already">Subject already Exists</string>
    <string name="minimalistic">Minimalistic</string>
    <string name="mode">Mode</string>


    <string-array name="languages">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string name="email_body">Message from talk2memo</string>
    <string name="email_sent_successfully">Message Sent</string>
    <string name="audio_file_name">Name Audio</string>
    <string name="content">Content</string>
</resources>
